# jay

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
classes/com/example/: Main.java
crates/bytecode/: Cargo.toml  build.rs  bytecodes.toml
crates/bytecode/src/: bytecodes.rs  error.rs  lib.rs  table.rs
crates/classfile/: Cargo.toml
crates/classfile/examples/: classfile.rs
crates/classfile/src/: access_flags.rs  attribute.rs  constant.rs  error.rs  lib.rs  parser.rs
crates/jimage/: Cargo.toml
crates/jimage/examples/: jimage.rs
crates/jimage/src/: error.rs  lib.rs  parser.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: class_path.rs  error.rs  lib.rs  runtime.rs
examples/: jimage.rs
src/: class_path.rs  classfile.rs  classpath.rs  cli.rs  error.rs  jdk.rs  jimage.rs  lib.rs  main.rs  runtime.rs  vm.rs
src/bytecode/: error.rs  mod.rs
src/class_file/: attributes.rs  constant_pool.rs  error.rs  mod.rs  parser.rs
src/jimage/: mod.rs  parser.rs
src/vm/: bytecode.rs  descriptors.rs  fields.rs  frame.rs  heap.rs  interpreter.rs  invocation.rs  lifecycle.rs  native.rs  native_runtime.rs  resolution.rs  runtime.rs  value.rs
tests/: ci_workflow.rs  jay_integration.rs  jimage_tests.rs  main.rs
tests/jay_integration/: arithmetic.rs  class_initialization.rs  class_loading.rs  collections.rs  errors.rs  objects.rs  static_methods.rs  support.rs
