[package]
name = "jay-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
jay-classfile = { path = "../classfile" }
jay-jimage = { path = "../jimage" }
jay-bytecode = { path = "../bytecode" }
